crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__delayed_type_views.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
assertion_line: 339
expression: "crate::harness::pass_snapshot(b.arena, root,\nformat!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after)))"
---
--- unoptimized Core
let helper#2 : int -> int = \unused#1 : int -> 42 in
helper#2 0
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_2 [helper_2 (con integer 0)]) (lam unused_1 (con integer 42))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let helper#2 : int -> int = \unused#1 : int -> 42 in
helper#2 0
--- core after
let helper#2 : @delay int = delay 42 in
force helper#2
