crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__last.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#16 : int -> int -> int -> int = \x#13 : int y#14 : int z#15 : int -> addInteger x#13 y#14 in
addInteger (helper#16 10 20 30) (helper#16 10 20 30)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_16
    [[(builtin addInteger)
      [[[helper_16 (con integer 10)] (con integer 20)] (con integer 30)]]
      [[[helper_16 (con integer 10)] (con integer 20)] (con integer 30)]])
    (lam x_13 (lam y_14 (lam z_15 [[(builtin addInteger) x_13] y_14])))])
--- optimized Core
let anf#5 : int = addInteger 10 20 in
let anf#6 : int = addInteger 10 20 in
addInteger anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam partial_3
    [(lam anf_1
      [(lam anf_2 [[(builtin addInteger) anf_1] anf_2]) [partial_3 (con integer 20)]])
      [partial_3 (con integer 20)]])
    [(builtin addInteger) (con integer 10)]])
--- isolated pass
--- core before
let helper#16 : int -> int -> int -> int = \x#13 : int y#14 : int z#15 : int -> addInteger x#13 y#14 in
let anf#17 : int = helper#16 10 20 30 in
let anf#18 : int = helper#16 10 20 30 in
addInteger anf#17 anf#18
--- uplc before
(program 1.1.0
  [(lam helper_16
    [(lam anf_17
      [(lam anf_18 [[(builtin addInteger) anf_17] anf_18])
        [[[helper_16 (con integer 10)] (con integer 20)] (con integer 30)]])
      [[[helper_16 (con integer 10)] (con integer 20)] (con integer 30)]])
    (lam x_13 (lam y_14 (lam z_15 [[(builtin addInteger) x_13] y_14])))])
--- core after
let helper#16 : int -> int -> int = \x#13 : int y#14 : int -> addInteger x#13 y#14 in
let anf#17 : int = helper#16 10 20 in
let anf#18 : int = helper#16 10 20 in
addInteger anf#17 anf#18
--- uplc after
(program 1.1.0
  [(lam helper_16
    [(lam anf_17
      [(lam anf_18 [[(builtin addInteger) anf_17] anf_18])
        [[helper_16 (con integer 10)] (con integer 20)]])
      [[helper_16 (con integer 10)] (con integer 20)]])
    (lam x_13 (lam y_14 [[(builtin addInteger) x_13] y_14]))])
--- result
(con integer 60)
--- logs
[]
