crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__partial.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
helper#3 0 42
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_3 [[helper_3 (con integer 0)] (con integer 42)])
    (lam unused_1 (lam used_2 used_2))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
let anf#4 : int -> int = helper#3 0 in
anf#4 42
--- uplc before
(program 1.1.0
  [(lam helper_3 [(lam anf_4 [anf_4 (con integer 42)]) [helper_3 (con integer 0)]])
    (lam unused_1 (lam used_2 used_2))])
--- core after
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
let anf#4 : int -> int = helper#3 0 in
anf#4 42
--- uplc after
(program 1.1.0
  [(lam helper_3 [(lam anf_4 [anf_4 (con integer 42)]) [helper_3 (con integer 0)]])
    (lam unused_1 (lam used_2 used_2))])
--- result
(con integer 42)
--- logs
[]
